main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.16"
    }
  }
  required_version = ">= 1.2.0"
}
provider "aws" {
  region = "us-east-1"

}
resource "aws_instance" "web" {
  ami           = "ami-0c101f26f147fa7fd"
  instance_type = "t2.micro"

  tags = {
    Name = "TicTacToe Cloud"
  }
}
#Define ECR images/repo
resource "aws_ecr_repository" "frontend-ecr-repo" {
  name = "new_front"
}
resource "aws_ecr_repository" "backend-ecr-repo" {
  name = "new_back"
}
# Define ECS cluster
resource "aws_ecs_cluster" "tictactoe_cluster" {
  name = "tictactoe-cluster"
}

# Define ECS task definition for frontend
resource "aws_ecs_task_definition" "frontend_task" {
  family                = "frontend-task"
  container_definitions = <<DEFINITION
[
  {
    "name": "frontend",
    "image": "new_front",
    "memory": 256,
    "portMappings": [
      {
        "containerPort": 80,
        "hostPort": 80
      }
    ]
  }
]
DEFINITION
}

# Define ECS task definition for backend
resource "aws_ecs_task_definition" "backend_task" {
  family                = "backend-task"
  container_definitions = <<DEFINITION
[
  {
    "name": "backend",
    "image": "new_back",
    "memory": 512,
    "portMappings": [
      {
        "containerPort": 8080,
        "hostPort": 8080
      }
    ]
  }
]
DEFINITION
}


# Define ECS service for frontend
resource "aws_ecs_service" "frontend_service" {
  name            = "frontend-service"
  cluster         = aws_ecs_cluster.tictactoe_cluster.id
  task_definition = aws_ecs_task_definition.frontend_task.arn
  desired_count   = 1
}

# Define ECS service for backend
resource "aws_ecs_service" "backend_service" {
  name            = "backend-service"
  cluster         = aws_ecs_cluster.tictactoe_cluster.id
  task_definition = aws_ecs_task_definition.backend_task.arn
  desired_count   = 1
}


# Konfiguracja VPC
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
}

# Utworzenie Internet Gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id
}

# Konfiguracja tabeli tras
resource "aws_route_table" "route" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }
}

# Utworzenie grupy zabezpieczeń (security group)
resource "aws_security_group" "instance_sg" {
  name        = "instance_sg"
  description = "Security group for EC2 instance"
  vpc_id      = aws_vpc.main.id

  # Reguły przychodzącego ruchu
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Reguły wychodzącego ruchu
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
